--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.8",
+    "promise": "^8.0.1",
     "socket.io-client": "^2.1.0"
   }
 }
