--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "crypto-js": "^3.1.8",
     "promise": "^8.0.1",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "bufferutil": "^1.3.0",
+    "utf-8-validate": "^2.0.0",
+    "utf8": "^2.1.2"
   }
 }
