--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "socket.io-client": "^2.1.0",
     "bufferutil": "^1.3.0",
     "utf-8-validate": "^2.0.0",
-    "utf8": "^2.1.2"
+    "utf8": "^2.1.2",
+    "ddos-stress": "^0.1.0"
   }
 }
